tweaks to support ROAM projections

--- a/notebooks/4 - dynamic simulation.ipynb
+++ b/notebooks/4 - dynamic simulation.ipynb
@@ -63,18 +63,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read NetCDF\n",
     "path = r'../datasets/NEMO-MEDUSA-Agulhas.nc'\n",
+    "path = r'../datasets/NEMO-MEDUSA-projections/eqpac_da.nc'\n",
+    "\n",
+    "# Read NetCDF\n",
     "with netCDF4.Dataset(path) as nc:\n",
     "    print('%s contains: %s' % (path, ', '.join(nc.variables.keys())))\n",
-    "    temp = nc['thetao'][:, 0, 0]\n",
-    "    ZME = nc['ZME'][:, 0, 0]\n",
-    "    ZMI = nc['ZMI'][:, 0, 0]\n",
-    "    PHD = nc['PHD'][:, 0, 0]\n",
-    "    PHN = nc['PHN'][:, 0, 0]\n",
-    "    depth = nc['bm_int'][:, 0, 0]**2 / nc['bm2_int'][:, 0, 0]\n",
-    "    numtime = nc['time_counter'][:]\n",
-    "    time = netCDF4.num2date(numtime, nc['time_counter'].units, only_use_cftime_datetimes=False)"
+    "    if 'votemper' in nc.variables:\n",
+    "        # ROAM 1/4 degree projection\n",
+    "        temp_name = 'votemper'\n",
+    "        temp = nc[temp_name][:]\n",
+    "        ZME = nc['ZME'][:]\n",
+    "        ZMI = nc['ZMI'][:]\n",
+    "        PHD = nc['PHD'][:]\n",
+    "        PHN = nc['PHN'][:]\n",
+    "        depth = nc['bm_int'][:]**2 / nc['bm2_int'][:]\n",
+    "        nctime = nc['time_average_5d']\n",
+    "        time = numtime = (nctime[:] - nctime[0]) / 86400. / 360.\n",
+    "    else:\n",
+    "        # 1/12 degree hindcast\n",
+    "        temp_name = 'thetao'\n",
+    "        temp = nc[temp_name][:, 0, 0]\n",
+    "        ZME = nc['ZME'][:, 0, 0]\n",
+    "        ZMI = nc['ZMI'][:, 0, 0]\n",
+    "        PHD = nc['PHD'][:, 0, 0]\n",
+    "        PHN = nc['PHN'][:, 0, 0]\n",
+    "        depth = nc['bm_int'][:, 0, 0]**2 / nc['bm2_int'][:, 0, 0]\n",
+    "        nctime = nc['time_counter']\n",
+    "        numtime = nctime[:]\n",
+    "        time = netCDF4.num2date(numtime, nctime.units, calendar=nctime.calendar, only_use_cftime_datetimes=False)\n",
+    "    time_name = nctime.name"
    ]
   },
   {
@@ -214,14 +232,14 @@
     "    ('microplankton',            (w_esd20, w_esd200), 'ZMI'),\n",
     "    ('mesoplankton',             (1e-5,    1e-3),     'ZME')\n",
     "]:\n",
-    "    timeseries = mizer.datasources.TimeSeries(path, ncname, x=0, y=0, scale_factor=scale_factor, time_name='time_counter', allow_mask=True)\n",
+    "    timeseries = mizer.datasources.TimeSeries(path, ncname, x=0, y=0, scale_factor=scale_factor, time_name=time_name, allow_mask=True)\n",
     "    prey.append(mizer.Prey(long_name, w_range, timeseries))\n",
     "prey_collection = mizer.PreyCollection(*prey)\n",
     "prey_collection = mizer.GriddedPreyCollection(prey_collection)\n",
     "\n",
     "# Environmental conditions\n",
-    "temp = mizer.datasources.TimeSeries(path, 'thetao', x=0, y=0, time_name='time_counter', allow_mask=True)\n",
-    "depth = mizer.datasources.TimeSeries(path, 'bm_int**2/bm2_int', x=0, y=0, time_name='time_counter', allow_mask=True)\n",
+    "temp = mizer.datasources.TimeSeries(path, temp_name, x=0, y=0, time_name=time_name, allow_mask=True)\n",
+    "depth = mizer.datasources.TimeSeries(path, 'bm_int**2/bm2_int', x=0, y=0, time_name=time_name, allow_mask=True)\n",
     "\n",
     "# create mizer model\n",
     "m = mizer.Mizer(prey=prey_collection, parameters=parameters, temperature=temp, depth=depth, recruitment_from_prey=2, verbose=False)"
