--- a/notebooks/6 - preproces NEMO-MEDUSA projections.ipynb
+++ b/notebooks/6 - preproces NEMO-MEDUSA projections.ipynb
@@ -57,7 +57,7 @@
     "\"\"\".split('\\t'), dtype=float)\n",
     "\n",
     "def combine(dir_path, path_out, last_year=None):\n",
-    "    time_units, z = None, None\n",
+    "    time_units, calendar, z = None, None, None\n",
     "    data = {}\n",
     "    for path in sorted(glob.glob(os.path.join(dir_path, '*grid_T.nc'))):\n",
     "        print(path)\n",
@@ -65,6 +65,7 @@
     "            nctime = nc[time_name]\n",
     "            if time_units is None:\n",
     "                time_units = nctime.units\n",
+    "                calendar = nctime.calendar\n",
     "                z = nc[depth_name][:]\n",
     "            assert time_units == nctime.units, 'Time units mismatch: %s vs %s' % (time_units, nctime.units)\n",
     "            numtime = nctime[:]\n",
@@ -97,6 +98,7 @@
     "            if name == 'numtime':\n",
     "                ncvar = nc.createVariable(time_name, slabs[0].dtype, (time_name,))\n",
     "                ncvar.units = time_units\n",
+    "                ncvar.calendar = calendar\n",
     "            else:\n",
     "                ncvar = nc.createVariable(name, slabs[0].dtype, (time_name, depth_name))\n",
     "            i = 0\n",
@@ -123,9 +125,10 @@
     "        ncout.createDimension(time_name)\n",
     "        nctime_out = ncout.createVariable(time_name, nctime_in.dtype, (time_name,))\n",
     "        nctime_out.units = nctime_in.units\n",
+    "        nctime_out.calendar = nctime_in.calendar\n",
     "        nctime_out[:] = nctime_in[:]\n",
-    "        ncout.createVariable('w_int', w_int.dtype, (time_name,))[:] = w_int\n",
-    "        ncout.createVariable('w2_int', w2_int.dtype, (time_name,))[:] = w2_int\n",
+    "        ncout.createVariable('bm_int', w_int.dtype, (time_name,))[:] = w_int\n",
+    "        ncout.createVariable('bm2_int', w2_int.dtype, (time_name,))[:] = w2_int\n",
     "        for name in ('votemper', 'PHN', 'PHD', 'ZMI', 'ZME'):\n",
     "            average = (w * ncin[name][:,:]).sum(axis=1) / w_int\n",
     "            ncvar_in = ncin[name]\n",
