extended projection datasets

--- a/notebooks/6 - preproces NEMO-MEDUSA projections.ipynb
+++ b/notebooks/6 - preproces NEMO-MEDUSA projections.ipynb
@@ -59,7 +59,7 @@
     "def combine(dir_path, path_out, last_year=None):\n",
     "    time_units, calendar, z = None, None, None\n",
     "    data = {}\n",
-    "    for path in sorted(glob.glob(os.path.join(dir_path, '*grid_T.nc'))):\n",
+    "    for path in sorted(glob.glob(os.path.join(dir_path, '*_5d_????_grid_T.nc'))):\n",
     "        print(path)\n",
     "        with netCDF4.Dataset(path) as nc:\n",
     "            nctime = nc[time_name]\n",
@@ -148,7 +148,7 @@
    "source": [
     "for path in glob.glob('../datasets/NEMO-MEDUSA-projections/*'):\n",
     "    if os.path.isdir(path):\n",
-    "        combine(path, path + '.nc', last_year=2046)\n",
+    "        combine(path, path + '.nc')\n",
     "        depth_average(path + '.nc', path + '_da.nc')"
    ]
   },
