added temporal averaging of ROAM datasets

--- a/notebooks/6 - preproces NEMO-MEDUSA projections.ipynb
+++ b/notebooks/6 - preproces NEMO-MEDUSA projections.ipynb
@@ -139,17 +139,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 3: smooth in time\n",
+    "def time_average(path_in, path_out, n):\n",
+    "    with netCDF4.Dataset(path_in) as ncin, netCDF4.Dataset(path_out, 'w') as ncout:\n",
+    "        ncout.createDimension(time_name)\n",
+    "        for name in (time_name, 'votemper', 'PHN', 'PHD', 'ZMI', 'ZME', 'bm_int', 'bm2_int'):\n",
+    "            ncvar_in = ncin[name]\n",
+    "            ncvar_out = ncout.createVariable(name, ncvar_in.dtype, (time_name,))\n",
+    "            if name == time_name:\n",
+    "                ncvar_out.units = ncvar_in.units\n",
+    "                ncvar_out.calendar = ncvar_in.calendar\n",
+    "            j = 0\n",
+    "            for i in range(0, ncvar_in.size, n):\n",
+    "                ncvar_out[j] = ncvar_in[i:i + n].mean()\n",
+    "                j += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
-    "tags": [
-     "outputPrepend"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
     "for path in glob.glob('../datasets/NEMO-MEDUSA-projections/*'):\n",
     "    if os.path.isdir(path):\n",
     "        combine(path, path + '.nc')\n",
-    "        depth_average(path + '.nc', path + '_da.nc')"
+    "        depth_average(path + '.nc', path + '_da.nc')\n",
+    "        time_average(path + '_da.nc', path + '_da_mo.nc', n=6)"
    ]
   },
   {
