added yearly averaging to preprocessing notebook

--- a/notebooks/6 - preproces NEMO-MEDUSA projections.ipynb
+++ b/notebooks/6 - preproces NEMO-MEDUSA projections.ipynb
@@ -162,7 +162,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [
+     "outputPrepend"
+    ]
    },
    "outputs": [],
    "source": [
@@ -170,7 +172,8 @@
     "    if os.path.isdir(path):\n",
     "        combine(path, path + '.nc')\n",
     "        depth_average(path + '.nc', path + '_da.nc')\n",
-    "        time_average(path + '_da.nc', path + '_da_mo.nc', n=6)"
+    "        time_average(path + '_da.nc', path + '_da_mo.nc', n=6)\n",
+    "        time_average(path + '_da.nc', path + '_da_yr.nc', n=360//5)"
    ]
   },
   {
