cosmetic tweaks to dynamic simulation

--- a/notebooks/4 - dynamic simulation.ipynb
+++ b/notebooks/4 - dynamic simulation.ipynb
@@ -278,12 +278,12 @@
    "source": [
     "normalization = 0   # 0: Sheldon spectrum (biomass per bin), 1: biomass density, 2: abundance density\n",
     "\n",
-    "# Characteristics of bins of the predator psectrum\n",
+    "# Characteristics of bins of the predator spectrum\n",
     "log_bin_masses = numpy.log10(m.bin_masses)\n",
     "dbin = log_bin_masses[1] - log_bin_masses[0]\n",
     "bin_width = 10.**(log_bin_masses + 0.5 * dbin) - 10.**(log_bin_masses - 0.5 * dbin)\n",
     "\n",
-    "# Characteristics of bins of the prey psectrum\n",
+    "# Characteristics of bins of the prey spectrum\n",
     "log_prey_masses = numpy.log10(m.prey.masses)\n",
     "dprey = log_prey_masses[1] - log_prey_masses[0]\n",
     "prey_bin_width = 10.**(log_prey_masses + 0.5 * dprey) - 10.**(log_prey_masses - 0.5 * dprey)\n",
@@ -366,9 +366,13 @@
    "source": [
     "## The \"large fish index\"\n",
     "\n",
-    "The LFI describes the fraction of biomass in the fish community that is present is fish larger than \"some threshold\".\n",
+    "The LFI describes the fraction of biomass in the fish community that is present in fish larger than \"some threshold\".\n",
     "\n",
-    "It is a commonly used metric to assess Good Environmental Status, or to summarize changes in the fish community under scenarios describing changes in fisheries pressure and/or climate.\n",
+    "It is a commonly used metric to assess Good Environmental Status, e.g.,\n",
+    "\n",
+    "https://oap.ospar.org/en/ospar-assessments/intermediate-assessment-2017/biodiversity-status/fish-and-food-webs/proportion-large-fish-large-fish-index/\n",
+    "\n",
+    "It can also conveniently summarize changes in the structure of the fish community under scenarios describing changes in fisheries pressure and/or climate.\n",
     "\n",
     "Caveat: a \"large fish\" is typically defined in terms of length. We need to convert that to wet mass to retrieve the LFI from our results."
    ],
@@ -390,13 +394,6 @@
     "ax.set_ylabel('fraction of fish > %.1f g' % wmin_lfi)\n",
     "ax.grid()"
    ]
-  },
-  {
-   "source": [
-    "## Mortality rates"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
   },
   {
    "source": [
