added copyright and licensing info

--- a/notebooks/2 - model ingredients.ipynb
+++ b/notebooks/2 - model ingredients.ipynb
@@ -23,6 +23,13 @@
  "cells": [
   {
    "source": [
+    "This notebook was written by Jorn Bruggeman for a workshop held 18-19 May 2021 as part of a contract from the [National Oceanography Centre](https://noc.ac.uk) to [Bolding & Bruggeman ApS](https://bolding-bruggeman.com/). It is licensed under a [Creative Commons Attribution 4.0 International License](http://creativecommons.org/licenses/by/4.0/)."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "# Ingredients of size spectrum models\n",
     "\n",
     "This document introduces the ingredients of the community size spectrum model (CSSM)\n",
